# directory_sync

./: .gitignore  README.md  pyproject.toml  sync.py
.vibe_coding/: v0.md  v1.md  v2.md  v3.md
src/directory_sync/: main.py
testing/scripts/: generate_test_data.py
