[project]
name = "directory_sync"
version = "0.1.0"
description = "A simple directory synchronization tool."
requires-python = ">=3.8"
dependencies = [
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
directory-sync = "directory_sync.main:main"
